--- a/index.ipynb
+++ b/index.ipynb
@@ -64,6 +64,7 @@
     "    less_than_50 = 100\n",
     "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
+    "    less_than_50 = 49\n",
     "    # else assign the `less_than_50` variable to 49"
    ]
   },
