automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = None\n",
+    "is_it_hot = temperative \n",
     "# conditionals go here"
    ]
   },
