automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = temperative \n",
+    "is_it_hot = temperature > 80\n",
     "# conditionals go here"
    ]
   },
