automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,12 +80,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = temperature > 80\n",
+    "is_it_hot\n",
     "# conditionals go here"
    ]
   },
