automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    ],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = temperature > 80\n",
+    "is_it_hot = \n",
     "is_it_hot\n",
     "# conditionals go here"
    ]
