automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
    ],
    "source": [
     "temperature = 85\n",
-    "is_it_hot = \n",
+    "if temperature > 80:\n",
+    "is_it_hot = 'It '\n",
     "is_it_hot\n",
     "# conditionals go here"
    ]
