automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,8 @@
    "source": [
     "temperature = 85\n",
     "if temperature > 80:\n",
-    "is_it_hot = 'It '\n",
+    "is_it_hot = 'It is so hot out!'\n",
+    "e\n",
     "is_it_hot\n",
     "# conditionals go here"
    ]
