--- a/index.ipynb
+++ b/index.ipynb
@@ -98,8 +98,8 @@
     "temperature = 85\n",
     "if temperature > 80:\n",
     "is_it_hot = 'It is so hot out!'\n",
-    "e\n",
-    "is_it_hot\n",
+    "else:\n",
+    "        is_it_hot\n",
     "# conditionals go here"
    ]
   },
