--- a/index.ipynb
+++ b/index.ipynb
@@ -97,9 +97,9 @@
    "source": [
     "temperature = 85\n",
     "if temperature > 80:\n",
-    "is_it_hot = 'It is so hot out!'\n",
+    "    is_it_hot = 'It is so hot out!'\n",
     "else:\n",
-    "        is_it_hot\n",
+    "    is_it_hot = 'Th'\n",
     "# conditionals go here"
    ]
   },
