automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'It is so hot out!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
     "    is_it_hot = 'It is so hot out!'\n",
     "else:\n",
     "    is_it_hot = 'This is nothing. Bring on the heat!'\n",
-    "is_it_\n",
+    "is_it_hot\n",
     "# conditionals go here"
    ]
   },
