automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = None\n",
+    "ends_with = string.endswith\n",
     "# conditionals go here"
    ]
   },
