--- a/index.ipynb
+++ b/index.ipynb
@@ -132,13 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
-    "ends_with = string.endswith\n",
+    "ends_with = string.endswith(sub_string)\n",
+    "ends\n",
     "# conditionals go here"
    ]
   },
