automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,14 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = string.endswith(sub_string)\n",
-    "ends\n",
+    "ends_with\n",
     "# conditionals go here"
    ]
   },
